fix: z-index for game-ending progress-bar

--- a/src/pages/QuizPage/QuizPage.scss
+++ b/src/pages/QuizPage/QuizPage.scss
@@ -227,7 +227,6 @@
     box-shadow: inset 0 0 50px $colorBlack;
     background: $colorBlueDark;
     color: $colorBlueLight;
-    z-index: 100;
     &:hover {
       color: $colorBg;
       div {
